--- a/V3/CHE/css/simstyle.css
+++ b/V3/CHE/css/simstyle.css
@@ -242,7 +242,7 @@
   color: #ffffffe5;
   width: 128px;
   -moz-box-sizing: border-box;
-  background: none repeat scroll 0 0 #282b30;
+  background: none repeat scroll 0 0 #47bb99;
   box-shadow: 5px 3px 5px #252729;
   border: 1px solid #777777;
   border-radius: 12px 12px 4px 12px;
