--- a/V3/template/css/custom_resp.css
+++ b/V3/template/css/custom_resp.css
@@ -13,7 +13,7 @@
 
 #expName {
   font-family: Georgia, "Times New Roman", Times, serif;
-  color: #ffffff;
+  color: #000000;
   display: inline-block;
   font-size: 47px;
   font-weight: bold;
@@ -176,7 +176,7 @@ body {
     margin-left: 2%;
     margin-right: 2%;
     padding-bottom: 48%;
-    background-color: #424549;
+    background-color: #e0e0fe;
     overflow-y: hidden;
     float: right !important;
     /* 		 -webkit-transition: all 0.5s ease;
