--- a/V3/template/css/mainstyle.css
+++ b/V3/template/css/mainstyle.css
@@ -4,7 +4,7 @@ body {
   font-size: 11px;
   padding: 0px;
   float: center;
-  background-color: #222831;
+  background-color: #ffffff;
   overflow-y: hidden;
 }
 
@@ -46,7 +46,7 @@ body {
 
 .mainTitle p {
   font-family: "Roboto" !important;
-  color: #cccdcc;
+  color: #000000;
   font-size: 45px;
   font-weight: bold;
   padding-top: 10px;
@@ -69,7 +69,7 @@ body {
 .controlHolder {
   height: 341px;
   float: right;
-  background-color: #424549;
+  background-color: #e0e0fe;
 }
 
 #canvasBox {
@@ -110,7 +110,7 @@ body {
   padding: 5px 0px 0px 10px;
   font-size: 12px;
   font-weight: 500;
-  color: #ffffff;
+  color: #000000;
   text-align: left !important;
 }
 .wideTxtArea {
