--- a/V3/template/css/mainstyle.css
+++ b/V3/template/css/mainstyle.css
@@ -6,6 +6,7 @@ body {
   float: center;
   background-color: #ffffff;
   overflow-y: hidden;
+  scale: 1.3;
 }
 
 #olabmenuBar a {
@@ -148,14 +149,14 @@ body {
   appearance: none;
   width: 10px;
   height: 15px;
-  background: #7289da;
+  background: #47bb99;
   cursor: pointer;
 }
 
 .rangeSlider::-moz-range-thumb {
   width: 25px;
   height: 15px;
-  background: #7289da;
+  background: #47bb99;
   cursor: pointer;
 }
 
