--- a/V3/template/css/mainstyle.css
+++ b/V3/template/css/mainstyle.css
@@ -1,12 +1,13 @@
 @charset "utf-8";
 body {
+  margin-top: 5%;
   color: #eeeeee;
   font-size: 11px;
   padding: 0px;
   float: center;
   background-color: #ffffff;
   overflow-y: hidden;
-  scale: 1.3;
+  scale: 1.4;
 }
 
 #olabmenuBar a {
